# cookiecutter-snekpack

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  LICENSE  MANIFEST.in  README.md  mkdocs.yml  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/: CONTRIBUTING.md
{{cookiecutter.package_name}}/.github/workflows/: tests.yml
{{cookiecutter.package_name}}/docs/reference/: api.md  count.md
{{cookiecutter.package_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.package_name}}/tests/: test_api.py  test_count.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  count.py
