##########################
# Setup.py Configuration #
##########################
[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1-dev
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}
download_url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/releases
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/issues
    Source Code = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}

# Author information
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
maintainer = {{cookiecutter.author_name}}
maintainer_email = {{cookiecutter.author_email}}

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    # TODO add your own free-text keywords
    cookiecutter

[options]
install_requires =
    {% if cookiecutter.command_line_interface|lower != "false" %}
    # Command line tools
    click
    more_click{% endif %}
    # TODO your requirements go here

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = {{cookiecutter.package_name}}

[options.packages.find]
where = {{cookiecutter.package_name}}

[options.extras_require]
tests =
    pytest
    coverage
docs =
    mkdocs
    mkdocstrings
    mkdocstrings.python

{% if cookiecutter.command_line_interface|lower != "false" %}
[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.cli:main
{% endif %}

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = {{cookiecutter.package_name}}
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    {{cookiecutter.package_name}}
    .tox/*/lib/python*/site-packages/{{cookiecutter.package_name}}

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    {{cookiecutter.package_name}}
    tests
